src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>DeliveryType__c</fullName>
        <label>配送方法</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpoApiCancelFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EXPOのAPIから注文キャンセルする・しない識別フラグ</description>
        <label>APIフラグ(システム用)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpoOrgInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expo組織情報</label>
        <referenceTo>ExpoOrgInfo__c</referenceTo>
        <relationshipLabel>注文</relationshipLabel>
        <relationshipName>OrderExpoOrgInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>キャンセル理由</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderAmountIncTax__c</fullName>
        <label>合計金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <externalId>true</externalId>
        <label>注文番号</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>注文ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ご注文</fullName>
                    <default>true</default>
                    <label>ご注文</label>
                </value>
                <value>
                    <fullName>処理中</fullName>
                </value>
                <value>
                    <fullName>保留</fullName>
                </value>
                <value>
                    <fullName>キャンセル</fullName>
                </value>
                <value>
                    <fullName>完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderUserId__c</fullName>
        <externalId>true</externalId>
        <label>購入者ID</label>
        <length>37</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayDetail__c</fullName>
        <label>決済詳細情報</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayType__c</fullName>
        <label>決済方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefParOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>注文</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>注文</relationshipLabel>
        <relationshipName>RefParOrderIndx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SetAmountTax__c</fullName>
        <label>消費税</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetAmount__c</fullName>
        <label>梱包毎合計金額(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetDeliveryAddress__c</fullName>
        <label>配送住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetDeliveryCharge__c</fullName>
        <label>配送料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SetDeliveryDate__c</fullName>
        <inlineHelpText>契約可能終了日(業者用)</inlineHelpText>
        <label>配送希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SetDeliveryTime__c</fullName>
        <label>配送希望時刻</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetOrderTitle__c</fullName>
        <label>配送先宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetRealDeliveryDate__c</fullName>
        <label>実際配送日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippingType__c</fullName>
        <label>発送方法</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>順次配送</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>一括配送</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>注文</relationshipLabel>
        <relationshipName>StmShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>注文</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Memo__c</columns>
        <columns>PayDetail__c</columns>
        <columns>PayType__c</columns>
        <columns>OrderUserId__c</columns>
        <columns>OrderAmountIncTax__c</columns>
        <columns>SetAmount__c</columns>
        <columns>SetRealDeliveryDate__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>OrderNo__c</columns>
        <columns>DeliveryType__c</columns>
        <columns>ShippingType__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>STM_{YYYYMMDD}_{00000000}</displayFormat>
        <label>注文#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>